# mkdocs-template

./: .gitignore  .gitlab-ci.yml  README.md  main.py  mkdocs.yml  requirements.txt
docs/: index.md
docs/development/mkdocs/: 00_install.md  get-google-sheet-macro.md  install.md  table-from-google-sheet.md  test-data.md  test-diagram.md
docs/mkdocs/: 00_install.md
docs/stylesheets/: extra.css
overrides/: main.html
plugins/mkdocs_gen_nav_plugin/: README.md  gen_nav_plugin.py  pyproject.toml
