[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-gen-nav-plugin"
version = "0.0.1"
authors = [
  { name="soonoh", email="soonoh.jung@gmail.com" },
]
description = "Mkdocs plugin to generate nav list from docs dir"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vrerv/mkdocs-template"
"Bug Tracker" = "https://github.com/vrerv/mkdocs-template/issues"

[project.entry-points."mkdocs.plugins"]
gen_nav = "gen_nav_plugin:GenNavPlugin"